--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 PORT = 4000
-DB_NAME = 'movielib'
+DB_NAME = 'postgres'
 DB_USER = 'postgres'
 DB_PASS = 'postgrespw'
-DB_HOST = 'localhost'
-DB_PORT = 55000
+DB_HOST = 'database-1.cjblsk2i0pik.ap-southeast-1.rds.amazonaws.com'
+DB_PORT = 5432
+# DB_PORT = 55000
 SECRET_KEY="movieLibrary@2023"
