--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 4000
-DB_NAME = 'postgres'
-DB_USER = 'postgres'
-DB_PASS = 'postgrespw'
-DB_HOST = 'database-1.cjblsk2i0pik.ap-southeast-1.rds.amazonaws.com'
-DB_PORT = 5432
+DB_NAME = ''
+DB_USER = ''
+DB_PASS = ''
+DB_HOST = ''
+DB_PORT = 
 # DB_PORT = 55000
-SECRET_KEY="movieLibrary@2023"
+SECRET_KEY=""
