--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ PORT = 4000
 DB_NAME = 'postgres'
 DB_USER = 'postgres'
 DB_PASS = 'postgrespw'
-DB_HOST = 'localhost'
-DB_PORT = 55000
-# DB_HOST = 'database-1.cjblsk2i0pik.ap-southeast-1.rds.amazonaws.com'
-# DB_PORT = 5432
+# DB_HOST = 'localhost'
+# DB_PORT = 55000
+DB_HOST = 'database-1.cjblsk2i0pik.ap-southeast-1.rds.amazonaws.com'
+DB_PORT = 5432
 SECRET_KEY="movieLibrary@2023"
